--- a/progress.html
+++ b/progress.html
@@ -4,43 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WeCode | Progress</title>
-  <link rel="stylesheet" href="styles/enhanced_styles.css">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/animations.css">
+
+  <!-- AOS if we want scrolling effects here too -->
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"> -->
 </head>
-<body class="warm-theme">
+<body class="page-progress">
   <div class="bg-wave"></div>
   <header>
     <div class="nav-container">
-      <div class="logo-group">
-        <span class="logo-text">WeCode</span>
-        <span class="logo-icon">{</span><span class="logo-icon">&lt;/&gt;</span><span class="logo-icon">}</span>
-      </div>
-      <nav>
-        <ul class="nav-menu" id="navMenu">
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-          <li><a href="resources.html" class="nav-link">Resources</a></li>
-          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-          <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-        </ul>
-      </nav>
-      <button id="theme-toggle" class="btn theme-btn" title="Switch Theme">
-        <img src="assets/icons/sun.svg" alt="Theme Icon" class="theme-icon">
-      </button>
       <div class="menu-toggle" id="menuToggle">
-        <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
+      <ul class="nav-menu" id="navMenu">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+        <li><a href="resources.html" class="nav-link">Resources</a></li>
+        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+      </ul>
+      <button id="theme-toggle" class="theme-btn">Switch Theme</button>
     </div>
   </header>
 
   <main class="page-content fade-in">
     <section class="glass" style="max-width:600px; margin:0 auto; text-align:center;">
-      <h1>Your Learning Journey</h1>
-      <p>
-        Track your completed lessons. The radial ring indicates your overall progress
-        across all lessons from modules 1–7.
+      <h1 data-aos="fade-down" style="margin-bottom:0.8em;">Your Learning Journey</h1>
+      <p style="max-width:500px; margin:0 auto 30px;">
+        Track your completed lessons. The radial ring below fills up as you progress through each module’s lessons.
       </p>
-      <div class="progress-radial" id="radialProgress" style="--percent:0;">
+      <div class="progress-radial zoom-in" id="radialProgress" style="--percent:0;">
         <span id="progress-label">0%</span>
       </div>
       <p id="progress-text" style="margin-top:10px;">Completed 0 / 21 Lessons</p>
@@ -50,9 +48,16 @@
   <footer>
     <p>© 2025 WeCode. All rights reserved.</p>
   </footer>
-
+  
   <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+
   <script src="scripts/main.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init({duration:800,once:false});
+  </script> -->
+
+  <!-- progress.js, in case you have logic for radial progress -->
   <script src="scripts/progress.js"></script>
 </body>
 </html>
