--- a/resume.html
+++ b/resume.html
@@ -1,42 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>WeCode | Resume</title>
-  <link rel="stylesheet" href="styles/enhanced_styles.css" />
-  <link rel="stylesheet" href="styles/animations.css" />
+
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/animations.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"> -->
 </head>
-<body class="warm-theme">
+<body class="page-resume fade-in">
   <div class="bg-wave"></div>
 
-  <header class="glass compact-header">
+  <header>
     <div class="nav-container">
-      <div class="logo-group">
-        <span class="logo-text">WeCode</span>
-        <span class="logo-icon">{</span><span class="logo-icon">&lt;/&gt;</span><span class="logo-icon">}</span>
-      </div>
-      <nav>
-        <ul class="nav-menu" id="navMenu">
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-          <li><a href="progress.html" class="nav-link">Progress</a></li>
-          <li><a href="resources.html" class="nav-link">Resources</a></li>
-          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-          <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-        </ul>
-      </nav>
-      <button id="theme-toggle" class="btn theme-btn" title="Switch Theme">
-        <img src="assets/icons/sun.svg" alt="Theme Icon" class="theme-icon">
-      </button>
       <div class="menu-toggle" id="menuToggle">
         <span class="bar"></span><span class="bar"></span><span class="bar"></span>
       </div>
+      <ul class="nav-menu" id="navMenu">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+        <li><a href="progress.html" class="nav-link">Progress</a></li>
+        <li><a href="resources.html" class="nav-link">Resources</a></li>
+        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+      </ul>
     </div>
   </header>
 
-  <main class="page-content fade-in" style="max-width:1000px; margin:auto;">
-    <section class="resume-section glass">
+  <main class="page-content">
+    <!-- Resume Container -->
+    <section class="resume-section glass zoom-in">
       <h2 class="section-title">Resume - Ohad Alon</h2>
       <div class="contact-info">
         <p><strong>Address:</strong> Herzliya, Israel</p>
@@ -48,35 +41,39 @@
       <p>
         Accomplished Senior Embedded Software Developer with extensive experience designing real-time systems,
         optimizing embedded software architectures, and delivering reliable, innovative solutions for complex projects.
-        Demonstrates expertise in cybersecurity protocols, AI integration, and mentoring diverse teams to meet goals.
+        Demonstrates expertise in cybersecurity protocols, AI integration, and mentoring diverse teams.
       </p>
 
-      <hr />
+      <hr/>
 
       <h3>Work Experience</h3>
 
-      <article class="job glass">
-        <h4>Senior Software Developer - CYMOTIVE Technologies <span>(02/2022 – present)</span></h4>
+      <article class="job">
+        <h4>Senior Software Developer - CYMOTIVE Technologies 
+            <span>(02/2022 – present)</span>
+        </h4>
         <ul>
-          <li>Designed secure communication protocols and enhanced system reliability with robust cryptographic solutions.</li>
+          <li>Designed secure communication protocols and enhanced system reliability with cryptographic solutions.</li>
           <li>Overhauled software architecture for improved data flow efficiency and scalability.</li>
-          <li>Created advanced support tools simplifying diagnostic workflows and accelerating delivery times.</li>
+          <li>Developed advanced support tools simplifying diagnostic workflows and accelerating delivery times.</li>
           <li>Collaborated with stakeholders, translating technical requirements into functional designs.</li>
         </ul>
       </article>
 
-      <article class="job glass">
+      <article class="job" data-aos="fade-up" data-aos-delay="200">
         <h4>Software Developer - Brodmann17 <span>(01/2021 – 02/2022)</span></h4>
         <ul>
           <li>Led development of AI solutions, improving object detection accuracy in automotive applications.</li>
           <li>Optimized algorithms for real-time performance under demanding conditions.</li>
-          <li>Successfully integrated AI capabilities into client platforms, enhancing reliability.</li>
+          <li>Integrated AI capabilities into client platforms, enhancing reliability.</li>
           <li>Coordinated teams to meet strict deadlines, achieving consistent project success.</li>
         </ul>
       </article>
 
-      <article class="job glass">
-        <h4>Senior Embedded Software Developer - Ceragon Networks <span>(11/2016 – 01/2021)</span></h4>
+      <article class="job" data-aos="fade-up" data-aos-delay="400">
+        <h4>Senior Embedded Software Developer - Ceragon Networks 
+            <span>(11/2016 – 01/2021)</span>
+        </h4>
         <ul>
           <li>Architected embedded software solutions for advanced telecommunications systems.</li>
           <li>Developed task-scheduling mechanisms improving resource utilization and reducing delays.</li>
@@ -85,7 +82,7 @@
         </ul>
       </article>
 
-      <article class="job glass">
+      <article class="job" data-aos="fade-up" data-aos-delay="600">
         <h4>Software Developer - Experis Israel <span>(04/2016 – 10/2016)</span></h4>
         <ul>
           <li>Developed efficient embedded software for multiple projects within strict deadlines.</li>
@@ -93,42 +90,44 @@
         </ul>
       </article>
 
-      <hr />
+      <hr/>
 
       <h3>Education</h3>
-      <article class="education glass">
-        <h4>Bachelor’s in Electrical and Electronics Engineering - Ruppin Academic Center <span>(2010–2014)</span></h4>
+      <article class="education" data-aos="fade-left">
+        <h4>Bachelor’s in Electrical and Electronics Engineering - Ruppin Academic Center 
+            <span>(2010–2014)</span>
+        </h4>
         <ul>
-          <li>Designed an embedded system for data acquisition, focusing on energy-efficient techniques.</li>
+          <li>Designed an embedded system for data acquisition, focusing on energy efficiency.</li>
           <li>Excelled in embedded systems design, signal processing, and low-level software engineering.</li>
         </ul>
       </article>
 
-      <hr />
+      <hr/>
 
       <h3>Key Projects</h3>
-      <article class="project glass">
+      <article class="project" data-aos="zoom-in">
         <h4>Automotive Cybersecurity Framework</h4>
         <ul>
           <li>Designed secure communication mechanisms for automotive systems.</li>
           <li>Deployed streamlined diagnostic tools addressing operational bottlenecks.</li>
         </ul>
       </article>
-      <article class="project glass">
+      <article class="project" data-aos="zoom-in" data-aos-delay="200">
         <h4>AI-Based Automotive Object Detection</h4>
         <ul>
-          <li>Integrated AI-driven solutions into client systems.</li>
-          <li>Improved object detection accuracy and performance in real-world scenarios.</li>
+          <li>Integrated AI-driven object detection solutions into client systems.</li>
+          <li>Improved detection accuracy and performance in real-world scenarios.</li>
         </ul>
       </article>
 
-      <hr />
+      <hr/>
 
       <h3>Skills</h3>
       <ul>
         <li><strong>Embedded Systems:</strong> Real-Time OS, Hardware-Software Integration</li>
         <li><strong>Languages:</strong> C, C++</li>
-        <li><strong>Cybersecurity:</strong> Cryptographic Protocols (TLS), Secure Design</li>
+        <li><strong>Cybersecurity:</strong> Cryptographic Protocols, Secure Design</li>
         <li><strong>AI Development:</strong> TensorFlow, Object Detection, Optimization</li>
         <li><strong>Debug Tools:</strong> GDB, Logic Analyzers, Real-Time Debugging</li>
         <li><strong>Soft Skills:</strong> Problem-Solving, Team Collaboration, Technical Leadership</li>
@@ -142,6 +141,11 @@
   </footer>
 
   <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+
   <script src="scripts/main.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init({ duration:800, once:false });
+  </script> -->
 </body>
 </html>
