refactor: update HTML structure and titles, enhance content clarity, and improve accessibility features

--- a/module3.html
+++ b/module3.html
@@ -3,38 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CodeForge++ | Module 3</title>
-  <link rel="stylesheet" href="styles/enhanced_styles.css">
+  <title>WeCode | Module 3</title>
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
-<body class="warm-theme">
+<body class="page-module fade-in">
   <div class="bg-wave"></div>
 
   <header>
     <div class="nav-container">
-      <div class="logo-group">
-        <span class="logo-text">CodeForge++</span>
-        <span class="logo-icon">{</span><span class="logo-icon">&lt;/&gt;</span><span class="logo-icon">}</span>
-      </div>
-      <nav>
-        <ul class="nav-menu" id="navMenu">
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-          <li><a href="progress.html" class="nav-link">Progress</a></li>
-          <li><a href="resources.html" class="nav-link">Resources</a></li>
-          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-          <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-        </ul>
-      </nav>
       <div class="menu-toggle" id="menuToggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <span class="bar"></span><span class="bar"></span><span class="bar"></span>
       </div>
+      <ul class="nav-menu" id="navMenu">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+        <li><a href="progress.html" class="nav-link">Progress</a></li>
+        <li><a href="resources.html" class="nav-link">Resources</a></li>
+        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+      </ul>
     </div>
   </header>
 
-  <main class="page-content fade-in">
+  <main class="page-content">
     <div class="breadcrumb">
       <a href="index.html">Home</a> <span>&gt;</span>
       <a href="exercises.html">Exercises</a> <span>&gt;</span>
@@ -42,54 +34,46 @@
     </div>
 
     <section class="glass module-lessons">
-      <h1>Module 3: Real-Time &amp; Embedded Systems</h1>
-      <p style="text-align:justify;">
-        Dive into RTOS fundamentals, task scheduling, concurrency in embedded environments,
-        interrupt handling, and hardware debugging techniques.
-      </p>
+      <h1>Module 3: Real‑Time &amp; Embedded Systems</h1>
+      <p>Focus on RTOS fundamentals, concurrency in embedded, interrupts, and hardware debugging.</p>
+
       <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
       <div class="module-timeline" id="moduleTimeline">
         <div class="timeline-step">Step 1: Intro to RTOS</div>
-        <div class="timeline-step">Step 2: Interrupts &amp; Basic Embedded Concurrency</div>
+        <div class="timeline-step">Step 2: Interrupts &amp; Concurrency</div>
       </div>
       <hr>
 
       <div style="text-align:center; margin:20px 0;">
         <img src="assets/images/module3_diagram.png" alt="RTOS Diagram" style="max-width:400px; border-radius:8px;">
-        <p style="font-size:0.9rem; color:#555;"><em>Figure: RTOS Overview</em></p>
+        <p style="font-size:0.9rem; color:#ccc;"><em>Figure: RTOS Overview</em></p>
       </div>
 
       <h2>Lesson 1: RTOS Basics</h2>
-      <p style="text-align:justify;">
-        Understand how real-time operating systems schedule tasks, manage priorities, and ensure deterministic behavior.
-        Simulate a small RTOS scheduler in code.
-      </p>
+      <p>Understand how tasks are scheduled in real-time operating systems, managing priorities deterministically.</p>
       <button class="btn" onclick="openExternalIDE('M3L1')">Open IDE for Lesson 1</button>
 
       <hr>
-
       <h2>Lesson 2: Interrupts &amp; Embedded Concurrency</h2>
-      <p style="text-align:justify;">
-        Learn how interrupts work at the hardware level. Implement a basic interrupt handler in C++ and
-        examine concurrency concerns in microcontroller-like environments.
-      </p>
+      <p>Design basic interrupt handlers, handle concurrency on microcontrollers, and avoid pitfalls.</p>
       <button class="btn" onclick="openExternalIDE('M3L2')">Open IDE for Lesson 2</button>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
+    <p>© 2025 WeCode. All rights reserved.</p>
   </footer>
 
   <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 
   <script src="scripts/main.js"></script>
   <script>
-    function toggleTimeline() {
-      document.getElementById('moduleTimeline').classList.toggle('show');
+    function toggleTimeline(){
+      const timeline = document.getElementById("moduleTimeline");
+      if(timeline) timeline.classList.toggle("show");
     }
     function openExternalIDE(lessonID) {
-      window.open(getWandboxLink(lessonID), '_blank');
+      window.open(getWandboxLink(lessonID), "_blank");
     }
   </script>
 </body>
