--- a/module5.html
+++ b/module5.html
@@ -3,38 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CodeForge++ | Module 5</title>
-  <link rel="stylesheet" href="styles/enhanced_styles.css">
+  <title>WeCode | Module 5</title>
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
-<body class="warm-theme">
+<body class="page-module fade-in">
   <div class="bg-wave"></div>
 
   <header>
     <div class="nav-container">
-      <div class="logo-group">
-        <span class="logo-text">CodeForge++</span>
-        <span class="logo-icon">{</span><span class="logo-icon">&lt;/&gt;</span><span class="logo-icon">}</span>
-      </div>
-      <nav>
-        <ul class="nav-menu" id="navMenu">
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-          <li><a href="progress.html" class="nav-link">Progress</a></li>
-          <li><a href="resources.html" class="nav-link">Resources</a></li>
-          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-          <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-        </ul>
-      </nav>
       <div class="menu-toggle" id="menuToggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <span class="bar"></span><span class="bar"></span><span class="bar"></span>
       </div>
+      <ul class="nav-menu" id="navMenu">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+        <li><a href="progress.html" class="nav-link">Progress</a></li>
+        <li><a href="resources.html" class="nav-link">Resources</a></li>
+        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+      </ul>
     </div>
   </header>
 
-  <main class="page-content fade-in">
+  <main class="page-content">
     <div class="breadcrumb">
       <a href="index.html">Home</a> <span>&gt;</span>
       <a href="exercises.html">Exercises</a> <span>&gt;</span>
@@ -43,10 +35,8 @@
 
     <section class="glass module-lessons">
       <h1>Module 5: Memory Management &amp; Debugging</h1>
-      <p style="text-align:justify;">
-        Learn how to handle dynamic memory carefully in C++. Explore manual allocation, 
-        modern smart pointers, and practical debugging tools.
-      </p>
+      <p>Efficient memory handling, pointers (manual &amp; smart), and debugging tools in C++.</p>
+
       <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
       <div class="module-timeline" id="moduleTimeline">
         <div class="timeline-step">Step 1: Manual Memory Allocation</div>
@@ -56,40 +46,34 @@
 
       <div style="text-align:center; margin:20px 0;">
         <img src="assets/images/module5_diagram.png" alt="Memory Diagram" style="max-width:400px; border-radius:8px;">
-        <p style="font-size:0.9rem; color:#555;"><em>Figure: Memory Management Overview</em></p>
+        <p style="font-size:0.9rem; color:#ccc;"><em>Figure: Memory Management Overview</em></p>
       </div>
 
       <h2>Lesson 1: Manual Memory Allocation</h2>
-      <p style="text-align:justify;">
-        Use <code>new</code> and <code>delete</code> in a controlled manner, and avoid common pitfalls 
-        like memory leaks and dangling pointers.
-      </p>
+      <p>Use <code>new</code> and <code>delete</code> responsibly, avoid memory leaks and dangling pointers.</p>
       <button class="btn" onclick="openExternalIDE('M5L1')">Open IDE for Lesson 1</button>
 
       <hr>
-
-      <h2>Lesson 2: Smart Pointers &amp; Debugging</h2>
-      <p style="text-align:justify;">
-        Utilize <code>std::unique_ptr</code>, <code>std::shared_ptr</code>, and <code>std::weak_ptr</code> 
-        effectively. Explore Valgrind, ASan, GDB, and other debugging tools for memory-related issues.
-      </p>
+      <h2>Lesson 2: Smart Pointers &amp; Debugging Tools</h2>
+      <p>Leverage <code>std::unique_ptr</code>, <code>std::shared_ptr</code>, Valgrind, and GDB for robust code.</p>
       <button class="btn" onclick="openExternalIDE('M5L2')">Open IDE for Lesson 2</button>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
+    <p>© 2025 WeCode. All rights reserved.</p>
   </footer>
 
   <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
-
+  
   <script src="scripts/main.js"></script>
   <script>
-    function toggleTimeline() {
-      document.getElementById('moduleTimeline').classList.toggle('show');
+    function toggleTimeline(){
+      const timeline = document.getElementById("moduleTimeline");
+      if(timeline) timeline.classList.toggle("show");
     }
     function openExternalIDE(lessonID) {
-      window.open(getWandboxLink(lessonID), '_blank');
+      window.open(getWandboxLink(lessonID), "_blank");
     }
   </script>
 </body>
