--- a/module1.html
+++ b/module1.html
@@ -4,40 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WeCode | Module 1</title>
-  <link rel="stylesheet" href="styles/enhanced_styles.css">
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
-<body class="warm-theme">
+<body class="page-module fade-in">
   <div class="bg-wave"></div>
 
   <header>
     <div class="nav-container">
-      <div class="logo-group">
-        <span class="logo-text">WeCode</span>
-        <span class="logo-icon">{</span><span class="logo-icon">&lt;/&gt;</span><span class="logo-icon">}</span>
-      </div>
-      <nav>
-        <ul class="nav-menu" id="navMenu">
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-          <li><a href="progress.html" class="nav-link">Progress</a></li>
-          <li><a href="resources.html" class="nav-link">Resources</a></li>
-          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-          <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-        </ul>
-      </nav>
-
-      <button id="theme-toggle" class="btn theme-btn" title="Switch Theme">
-        <img src="assets/icons/sun.svg" alt="Theme Icon" class="theme-icon">
-      </button>
-
       <div class="menu-toggle" id="menuToggle">
         <span class="bar"></span><span class="bar"></span><span class="bar"></span>
       </div>
+      <ul class="nav-menu" id="navMenu">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+        <li><a href="progress.html" class="nav-link">Progress</a></li>
+        <li><a href="resources.html" class="nav-link">Resources</a></li>
+        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+      </ul>
     </div>
   </header>
 
-  <main class="page-content fade-in">
+  <main class="page-content">
     <div class="breadcrumb">
       <a href="index.html">Home</a> <span>&gt;</span>
       <a href="exercises.html">Exercises</a> <span>&gt;</span>
@@ -46,9 +35,8 @@
 
     <section class="glass module-lessons">
       <h1>Module 1: Foundations &amp; Modern C++</h1>
-      <p>
-        This module covers essential modern C++ techniques—including <strong>RAII, smart pointers, and lambdas</strong>.
-      </p>
+      <p>This module covers essential modern C++ techniques—including RAII, smart pointers, and lambdas.</p>
+
       <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
       <div class="module-timeline" id="moduleTimeline">
         <div class="timeline-step">Step 1: RAII Overview</div>
@@ -59,33 +47,21 @@
 
       <div style="text-align:center; margin:20px 0;">
         <img src="assets/images/module1_diagram.png" alt="RAII Diagram" style="max-width:400px; border-radius:8px;">
-        <p style="font-size:0.9rem; color:#333;"><em>Figure: RAII Diagram</em></p>
+        <p style="font-size:0.9rem; color:#ccc;"><em>Figure: RAII Diagram</em></p>
       </div>
 
       <h2>Lesson 1: RAII &amp; Constructors</h2>
-      <p>
-        Learn how resource acquisition is tied to initialization in modern C++.
-        Implement a <code>FileWrapper</code> class that opens a file in its constructor and closes it in the destructor,
-        handling errors gracefully.
-      </p>
+      <p>Create a <code>FileWrapper</code> class that opens a file in its constructor and closes it in the destructor, handling errors gracefully.</p>
       <button class="btn" onclick="openExternalIDE('M1L1')">Open IDE for Lesson 1</button>
 
       <hr>
-
       <h2>Lesson 2: Smart Pointers &amp; Move Semantics</h2>
-      <p>
-        Discover how to use <code>std::unique_ptr</code> and <code>std::shared_ptr</code> along with move semantics
-        to manage resources effectively. Transfer ownership with <code>std::move</code> and avoid memory leaks.
-      </p>
+      <p>Use <code>std::unique_ptr</code>, <code>std::shared_ptr</code>, and move semantics to manage resources effectively, avoiding leaks.</p>
       <button class="btn" onclick="openExternalIDE('M1L2')">Open IDE for Lesson 2</button>
 
       <hr>
-
       <h2>Lesson 3: Lambdas &amp; STL Algorithms</h2>
-      <p>
-        Use lambdas in combination with STL algorithms (e.g., <code>std::remove_if</code>) for concise yet powerful code.
-        Explore different capture methods and real-world examples.
-      </p>
+      <p>Leverage lambdas for concise code with STL (e.g., <code>std::remove_if</code>) and explore different capture modes.</p>
       <button class="btn" onclick="openExternalIDE('M1L3')">Open IDE for Lesson 3</button>
     </section>
   </main>
@@ -95,13 +71,18 @@
   </footer>
 
   <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+
+  <!-- Scripts -->
   <script src="scripts/main.js"></script>
   <script>
     function toggleTimeline() {
-      document.getElementById('moduleTimeline').classList.toggle('show');
+      const timeline = document.getElementById("moduleTimeline");
+      if(timeline) timeline.classList.toggle("show");
     }
     function openExternalIDE(lessonID) {
-      window.open(getWandboxLink(lessonID), '_blank');
+      // using getWandboxLink from main.js
+      const url = getWandboxLink(lessonID);
+      window.open(url, "_blank");
     }
   </script>
 </body>
