--- a/module2.html
+++ b/module2.html
@@ -3,38 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CodeForge++ | Module 2</title>
-  <link rel="stylesheet" href="styles/enhanced_styles.css">
+  <title>WeCode | Module 2</title>
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
-<body class="warm-theme">
+<body class="page-module fade-in">
   <div class="bg-wave"></div>
 
   <header>
     <div class="nav-container">
-      <div class="logo-group">
-        <span class="logo-text">CodeForge++</span>
-        <span class="logo-icon">{</span><span class="logo-icon">&lt;/&gt;</span><span class="logo-icon">}</span>
-      </div>
-      <nav>
-        <ul class="nav-menu" id="navMenu">
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-          <li><a href="progress.html" class="nav-link">Progress</a></li>
-          <li><a href="resources.html" class="nav-link">Resources</a></li>
-          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-          <li><a href="quiz.html" class="nav-link">Quiz</a></li>
-        </ul>
-      </nav>
       <div class="menu-toggle" id="menuToggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <span class="bar"></span><span class="bar"></span><span class="bar"></span>
       </div>
+      <ul class="nav-menu" id="navMenu">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+        <li><a href="progress.html" class="nav-link">Progress</a></li>
+        <li><a href="resources.html" class="nav-link">Resources</a></li>
+        <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+      </ul>
     </div>
   </header>
 
-  <main class="page-content fade-in">
+  <main class="page-content">
     <div class="breadcrumb">
       <a href="index.html">Home</a> <span>&gt;</span>
       <a href="exercises.html">Exercises</a> <span>&gt;</span>
@@ -43,53 +35,46 @@
 
     <section class="glass module-lessons">
       <h1>Module 2: Data Structures &amp; Algorithms</h1>
-      <p style="text-align:justify;">
-        This module explores fundamental and advanced data structures—arrays, linked lists, stacks, queues, 
-        trees, graphs, and the core sorting/searching algorithms.
-      </p>
+      <p>Explore arrays, linked lists, sorting, searching, BFS/DFS, and more fundamental algorithms.</p>
+
       <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
       <div class="module-timeline" id="moduleTimeline">
         <div class="timeline-step">Step 1: Arrays &amp; Linked Lists</div>
-        <div class="timeline-step">Step 2: Trees, Graphs &amp; Basic Algorithms</div>
+        <div class="timeline-step">Step 2: Trees &amp; Graphs</div>
       </div>
       <hr>
 
       <div style="text-align:center; margin:20px 0;">
-        <img src="assets/images/module2_diagram.png" alt="Data Structures" style="max-width:400px; border-radius:8px;">
-        <p style="font-size:0.9rem; color:#555;"><em>Figure: Data Structures &amp; Algorithms</em></p>
+        <img src="assets/images/module2_diagram.png" alt="Data Structures Diagram" style="max-width:400px; border-radius:8px;">
+        <p style="font-size:0.9rem; color:#ccc;"><em>Figure: Data Structures Overview</em></p>
       </div>
 
       <h2>Lesson 1: Arrays &amp; Linked Lists</h2>
-      <p style="text-align:justify;">
-        Understand the implementation and trade-offs of arrays vs. linked lists. Implement basic operations
-        (insert, delete, traversal) for each, and discuss performance.
-      </p>
+      <p>Implement basic operations (insert, delete, traverse) and analyze time complexities.</p>
       <button class="btn" onclick="openExternalIDE('M2L1')">Open IDE for Lesson 1</button>
 
       <hr>
-
       <h2>Lesson 2: Trees &amp; Graphs</h2>
-      <p style="text-align:justify;">
-        Explore tree traversals (in-order, pre-order, post-order) and implement BFS/DFS for graphs. 
-        Apply these to solve basic problems in data structures.
-      </p>
+      <p>Explore tree traversals (in-order, pre-order, post-order) and BFS/DFS on graphs.</p>
       <button class="btn" onclick="openExternalIDE('M2L2')">Open IDE for Lesson 2</button>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
+    <p>© 2025 WeCode. All rights reserved.</p>
   </footer>
 
   <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 
   <script src="scripts/main.js"></script>
   <script>
-    function toggleTimeline() {
-      document.getElementById('moduleTimeline').classList.toggle('show');
+    function toggleTimeline(){
+      const timeline = document.getElementById("moduleTimeline");
+      if(timeline) timeline.classList.toggle("show");
     }
     function openExternalIDE(lessonID) {
-      window.open(getWandboxLink(lessonID), '_blank');
+      const url = getWandboxLink(lessonID);
+      window.open(url, "_blank");
     }
   </script>
 </body>
